; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_tc.c_getmicrotime.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_tc.c_getmicrotime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timehands = type { i64, %struct.timeval }
%struct.timeval = type { i32 }

@timehands = common dso_local global %struct.timehands* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @getmicrotime(%struct.timeval* %0) #0 {
  %2 = alloca %struct.timeval*, align 8
  %3 = alloca %struct.timehands*, align 8
  %4 = alloca i64, align 8
  store %struct.timeval* %0, %struct.timeval** %2, align 8
  br label %5

5:                                                ; preds = %25, %1
  %6 = load %struct.timehands*, %struct.timehands** @timehands, align 8
  store %struct.timehands* %6, %struct.timehands** %3, align 8
  %7 = load %struct.timehands*, %struct.timehands** %3, align 8
  %8 = getelementptr inbounds %struct.timehands, %struct.timehands* %7, i32 0, i32 0
  %9 = call i64 @atomic_load_acq_int(i64* %8)
  store i64 %9, i64* %4, align 8
  %10 = load %struct.timeval*, %struct.timeval** %2, align 8
  %11 = load %struct.timehands*, %struct.timehands** %3, align 8
  %12 = getelementptr inbounds %struct.timehands, %struct.timehands* %11, i32 0, i32 1
  %13 = bitcast %struct.timeval* %10 to i8*
  %14 = bitcast %struct.timeval* %12 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %13, i8* align 8 %14, i64 4, i1 false)
  %15 = call i32 (...) @atomic_thread_fence_acq()
  br label %16

16:                                               ; preds = %5
  %17 = load i64, i64* %4, align 8
  %18 = icmp eq i64 %17, 0
  br i1 %18, label %25, label %19

19:                                               ; preds = %16
  %20 = load i64, i64* %4, align 8
  %21 = load %struct.timehands*, %struct.timehands** %3, align 8
  %22 = getelementptr inbounds %struct.timehands, %struct.timehands* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = icmp ne i64 %20, %23
  br label %25

25:                                               ; preds = %19, %16
  %26 = phi i1 [ true, %16 ], [ %24, %19 ]
  br i1 %26, label %5, label %27

27:                                               ; preds = %25
  ret void
}

declare dso_local i64 @atomic_load_acq_int(i64*) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @atomic_thread_fence_acq(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
